--- a/expensy-app/package.json
+++ b/expensy-app/package.json
@@ -20,7 +20,8 @@
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
     "express-validator": "^6.14.2",
-    "prisma": "^4.3.1"
+    "prisma": "^4.3.1",
+    "prom-client": "^14.1.0"
   },
   "devDependencies": {
     "concurrently": "^7.4.0",
