--- a/expensy-app/Dockerfile
+++ b/expensy-app/Dockerfile
@@ -8,8 +8,10 @@ COPY package.json ./
 
 RUN npm install
 
-RUN npx prisma migrate dev --name init
+#RUN npx prisma migrate deploy
 
-EXPOSE 3000
+EXPOSE 8080
+
+EXPOSE 3306
 
 CMD ["node", "backend/server.js"]
